# slam_study_code

./: README.md
ch2/: CMakeLists.txt
ch2/include/: helloslam.h
ch2/src/: helloslam.cpp  main.cpp  tempCodeRunnerFile.cpp
ch3_1/: CMakeLists.txt
ch3_1/src/: eigenMatrix.cpp  tempCodeRunnerFile.cpp
ch3_2/: CMakeLists.txt
ch3_2/src/: useGeometry.cpp
ch3_3/: CMakeLists.txt
ch3_3/src/: coordinateTransform.cpp
ch3_4/: CMakeLists.txt
ch3_4/src/: plotTrajectory.cpp
ch4_1/: CMakeLists.txt
ch4_1/src/: useSophus.cpp
ch4_2/: CMakeLists.txt
ch4_2/src/: trajectoryError.cpp
